tests/baselines/reference/000.errors.txt
000.ts(7,33): error TS2353: Object literal may only specify known properties, and 'extra' does not exist in type '{ a: 1; b: "2"; c: true; }'.


==== 000.ts (1 errors) ====
    interface Test {
      a: number,
      b: string,
      c: boolean
    }
    
    revert({ a: 1, b: '2', c: true, extra: 35 })
                                    ~~~~~
!!! error TS2353: Object literal may only specify known properties, and 'extra' does not exist in type '{ a: 1; b: "2"; c: true; }'.
    
    
    declare function revert<const T extends Test>(t: { [P in keyof T & keyof Test]: T[P] }): T